tests/spec/emit/snapshots/newtype_over_result_less_func_field_access.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Cb(fn(int) -> ())
  
  fn test(cb: Cb) {
    cb.0(1)
  }
---
package main

type Cb func(int)

func test(cb Cb) {
	(func(int))(cb)(1)
}
