tests/spec/emit/snapshots/newtype_over_result_less_func_pattern_match.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  struct Cb(fn(int) -> ())
  
  fn test(c: Cb) {
    match c {
      Cb(f) => f(1),
    }
  }
---
package main

type Cb func(int)

func test(c Cb) {
	(func(int))(c)(1)
}
