tests/spec/emit/snapshots/newtype_ref_struct_pattern_match.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  struct Wrap(Ref<int>)
  
  fn test(w: Wrap) -> int {
    match w {
      Wrap(r) => r.*,
    }
  }
---
package main

type Wrap *int

func test(w Wrap) int {
	return *(*int)(w)
}
