tests/spec/emit/snapshots/newtype_return_from_underlying_variable_casts.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nstruct UserId(int)\n\nfn make(i: int) -> UserId {\n  i as UserId\n}\n"
---
package main

import "fmt"

type UserId int

func (u UserId) String() string {
	return fmt.Sprintf("UserId(%v)", int(u))
}

func make_(i int) UserId {
	return UserId(i)
}
