tests/spec/emit/snapshots/newtype_slice_append.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Wrap(Slice<int>)
  
  fn main() {
    let mut w = Wrap([1])
    w = Wrap(w.0.append(2))
  }
---
package main

type Wrap []int

func main() {
	w := Wrap([]int{1})
	w = Wrap(append(([]int)(w), 2))
}
