tests/spec/emit/snapshots/newtype_struct_field_from_underlying_value_casts.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nstruct UserId(int)\nstruct Box { v: UserId }\n\nfn test(i: int) -> Box {\n  Box { v: i as UserId }\n}\n"
---
package main

import "fmt"

type UserId int

func (u UserId) String() string {
	return fmt.Sprintf("UserId(%v)", int(u))
}

type Box struct {
	v UserId
}

func (b Box) String() string {
	return fmt.Sprintf("Box { v: %v }", b.v)
}

func test(i int) Box {
	return Box{v: UserId(i)}
}
