tests/spec/emit/snapshots/newtype_struct_pattern_match.snap
---
source: tests/spec/emit/patterns.rs
description: "input: \nstruct UserId(int)\n\nfn test(uid: UserId) -> int {\n  match uid {\n    UserId(id) => id,\n  }\n}\n"
---
package main

import "fmt"

type UserId int

func (u UserId) String() string {
	return fmt.Sprintf("UserId(%v)", int(u))
}

func test(uid UserId) int {
	{
		return int(uid)
	}
}
