tests/spec/emit/snapshots/newtype_tuple_field_append.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nstruct Pair(Slice<int>, int)\nstruct Wrap(Pair)\n\nfn main() {\n  let mut w = Wrap(Pair([1], 0))\n  let mut p = w.0\n  p.0 = p.0.append(2)\n  w = Wrap(p)\n  let _ = w\n}\n"
---
package main

type Pair struct {
	F0 []int
	F1 int
}

type Wrap Pair

func main() {
	w := Wrap(Pair{
		F0: []int{1},
		F1: 0,
	})
	p := Pair(w)
	p.F0 = append(p.F0, 2)
	w = Wrap(p)
	_ = w
}
