tests/spec/emit/snapshots/nilable_option_in_tuple_slot_lowers_directly_satisfying_go_interface.snap
---
source: tests/spec/emit/go_interface_adapter.rs
description: |
  
  import "go:example.com/tea"
  
  struct Model {}
  
  impl Model {
    fn Update(self, msg: tea.Msg) -> (tea.Model, Option<tea.Cmd>) {
      (self as tea.Model, Some(tea.Quit))
    }
    fn View(self) -> string { "" }
  }
  
  fn main() {
    let _ = tea.NewProgram(Model {} as tea.Model)
  }
---
package main

import "example.com/tea"

type Model struct{}

func (m Model) Update(_ tea.Msg) (tea.Model, tea.Cmd) {
	return m, tea.Quit
}

func (m Model) View() string {
	return ""
}

func main() {
	tea.NewProgram(Model{})
}
